objects/Task__c.object
<CustomObject>
    <description>Holds the actions under each substage</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Available_for_Resubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Available for Resubmit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <label>Case Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Trigger_After_Completion__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Underwriting</fullName>
                </value>
                <value>
                    <fullName>CBSR Issue</fullName>
                </value>
                <value>
                    <fullName>Custom Benefit/Service</fullName>
                </value>
                <value>
                    <fullName>LGNA - General Case</fullName>
                </value>
                <value>
                    <fullName>Network Information</fullName>
                </value>
                <value>
                    <fullName>Performance Guarantee</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>SG - General Case</fullName>
                </value>
                <value>
                    <fullName>Mid-Market Underwriting</fullName>
                </value>
                <value>
                    <fullName>Cede</fullName>
                </value>
                <value>
                    <fullName>Private Exchange - Blue Directions</fullName>
                </value>
                <value>
                    <fullName>Private Exchange - External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <label>Due Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Insite url for images for the Tasks.</description>
        <inlineHelpText>Please enter a valid URL address.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Insite_Image__c</fullName>
        <formula>IMAGE( Image_URL__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insite Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <label>Owner/Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Channel Manager</fullName>
                </value>
                <value>
                    <fullName>Executive Sponsor</fullName>
                </value>
                <value>
                    <fullName>Lead Qualifier</fullName>
                </value>
                <value>
                    <fullName>Pre-Sales Consultant</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Substage__c</fullName>
        <label>Substage</label>
        <referenceTo>Substage__c</referenceTo>
        <relationshipName>Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Task_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Task External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Task_Sort_Order__c</fullName>
        <label>Task Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Task Type</description>
        <label>Task Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Best Practices</fullName>
                </value>
                <value>
                    <fullName>Other Applications</fullName>
                </value>
                <value>
                    <fullName>Tools, Templates, Forms</fullName>
                </value>
                <value>
                    <fullName>Scripting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_After_Completion__c</fullName>
        <label>Trigger After Completion</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Create a Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>